--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html ng-app="packetLogger">
   <head>
     <meta charset="utf-8" />
     <title>Packet Tool</title>
@@ -8,6 +8,12 @@
     <link rel="stylesheet" type="text/css" href="./css/style.css" />
   </head>
   <body>
+    <div ng-controller="ModalCtrl">
+      <button class="btn btn-default" ng-click="open()">Open me!</button>
+      <button class="btn btn-default" ng-click="open('lg')">Large modal</button>
+      <button class="btn btn-default" ng-click="open('sm')">Small modal</button>
+      <div ng-show="selected">Selection from a modal: {{selected}}</div>
+    </div>
     <script type="text/javascript" src="./js/jquery-1.11.1.min.js"></script>
     <script type="text/javascript" src="./js/angular.min.js"></script>
     <script type="text/javascript" src="./js/ui-bootstrap-tpls-0.11.0.min.js"></script>
